<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <ImageView
            android:id="@+id/hotel_image2"
            android:layout_width="317dp"
            android:layout_height="92dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/hotel_vacation_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacation_description" />

        <View
            android:id="@+id/background_border"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/black_border"
            app:layout_constraintEnd_toEndOf="@+id/vacation_name"
            app:layout_constraintStart_toStartOf="@+id/vacation_name"
            app:layout_constraintTop_toTopOf="@+id/vacation_name"
            app:layout_constraintBottom_toBottomOf="@+id/vacation_description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_image2"
            app:srcCompat="@android:drawable/ic_menu_add"
            tools:ignore="ImageContrastCheck" />

        <!-- Vacation Name Field -->
        <com.example.desiredvacationsapp.widgets.CustomEditText
            android:id="@+id/vacation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customHint="@string/vacation_name_req"
            android:contentDescription="@string/add_vacation_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <!-- Hotel Name Field -->
        <com.example.desiredvacationsapp.widgets.CustomEditText
            android:id="@+id/hotel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customHint="@string/vacation_hotel_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacation_name" />

        <!-- Vacation Location Field -->
        <com.example.desiredvacationsapp.widgets.CustomEditText
            android:id="@+id/vacation_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customHint="@string/vacation_location_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_name" />

        <!-- Money Necessary Field -->
        <com.example.desiredvacationsapp.widgets.CustomEditText
            android:id="@+id/money_necessary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/vacation_money_necessary_req"
            app:customHint="@string/vacation_money_necessary_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacation_location"
            tools:ignore="ContentDescription" />

        <!-- Vacation Description Field -->
        <com.example.desiredvacationsapp.widgets.CustomEditText
            android:id="@+id/vacation_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customHint="@string/vacation_description_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/money_necessary" />

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_image_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
